unpackaged/main/default/objects/CMPL123__Audit_Assessment_Template__c/CMPL123__Audit_Assessment_Template__c.object-meta.xml
<CustomObject>
    <description>Audit Assessment Template</description>
    <label>Audit Assessment Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Assessment Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>