unpackaged/main/default/objects/CMPL123__Audit_Assessment_Template__c/fields/CMPL123__Question10__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Question10__c</fullName>
        <description>Question 10</description>
        <label>Question 10 Text</label>
        <type>TextArea</type>
    </CustomField>