unpackaged/main/default/objects/CMPL123__Audit_Assessment_Template__c/fields/CMPL123__Question11__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Question11__c</fullName>
        <description>Question 11</description>
        <label>Question 11 Text</label>
        <type>TextArea</type>
    </CustomField>