unpackaged/main/default/objects/CMPL123__Audit_Assessment_Template__c/fields/CMPL123__Question12__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Question12__c</fullName>
        <description>Question 12</description>
        <label>Question 12 Text</label>
        <type>TextArea</type>
    </CustomField>