unpackaged/main/default/objects/CMPL123__Audit_Assessment_Template__c/fields/CMPL123__Question12_Weight__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Question12_Weight__c</fullName>
        <description>Question12 Weight</description>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>