unpackaged/main/default/objects/CMPL123__Audit_Assessment_Template__c/fields/CMPL123__Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Effective</fullName>
                </value>
                <value>
                    <fullName>Suppressed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>